--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ enterView({
 
 			enterView({
 				selector: '.block-b',
-				offset: '25%',
+				offset: 0.25,
 				trigger: function(el) {
 					el.classList.add('entered');
 				}
@@ -172,7 +172,7 @@ enterView({
 
 			enterView({
 				selector: '.block-c',
-				offset: '75%',
+				offset: 0.75,
 				trigger: function(el) {
 					el.classList.add('entered');
 				}
@@ -180,7 +180,7 @@ enterView({
 
 			enterView({
 				selector: '.block-d',
-				offset: '50%',
+				offset: 0.5,
 				trigger: function(el) {
 					el.classList.add('entered');
 				}
