--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ enterView({
 				selector: '.block-a',
 				trigger: function(el) {
 					el.classList.add('entered');
-				}
+				},
+				once: false
 			});
 
 			enterView({
